# IoPluginDemo

./: .gitignore  CMakeLists.txt  README.md  build_vs2015.bat  build_vs2017.bat  cmake_vs2015.bat  cmake_vs2017.bat
Source/Core/: AppIncludes.h  CMakeLists.txt  ComponentRegistration.h  IndexUtilities.cpp  IndexUtilities.h  IoComponentBase.cpp  IoComponentBase.h  IoComponentGroup.h  IoDataTree.cpp  IoDataTree.h  IoGraph.cpp  IoGraph.h  IoInputSlot.cpp  IoInputSlot.h  IoOutputSlot.cpp  IoOutputSlot.h  IoSerialization.cpp  IoSerialization.h  NetworkUtilities.cpp  NetworkUtilities.h  PersistentData.cpp  PersistentData.h  PluginAPI.cpp  PluginAPI.h  Win.h
Source/MyPlugin/: CMakeLists.txt  Mesh_PluginDemo.cpp  PluginAPI.h
Test/: CMakeLists.txt  IoTests.cpp
